added rotations, moved galaxy catalog script into illustris_frb module

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-n_e_maps/
 data/
+figures/
 logs/
-old_scripts/
-skeleton_notebooks/
+*submit*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
